--- a/res/css/palette.css
+++ b/res/css/palette.css
@@ -1,5 +1,5 @@
 :root{
-    --back-color: #F7E3D4;
+    --back-color: #f7e3d4;
     --text-color: #FC7307;
     --main-color: #1461B8;
     --main-color2: #236AB9;
