--- a/res/css/style.css
+++ b/res/css/style.css
@@ -29,3 +29,23 @@
 {
     clip-path: inset(0% 30% 0% 30%);
 }
+
+#maphoto
+{
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    left: calc(50% - 300px/2);
+    top: calc(50% - 300px/2 - 49px);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    zoom:100%;
+    border-radius: 1000px;
+}
+
+#flagLangue
+{
+    width: 50px;
+    height: 50px;
+    padding: 0;
+    cursor: pointer;
+}
